<resources>
    <string name="app_name">Pet Shop</string>
    <string name="escolha_o_cachorro_que_deseja">Escolha o cachorro que deseja:</string>
    <string name="border_collie_r_800_00">Border Collie R$ 800,00</string>
    <string name="pit_bull_r_750_00">Pit Bull R$ 750,00</string>
    <string name="pastor_alem_o_r_700_00">Pastor Alemão R$ 700,00</string>
    <string name="pastor_canadense_r_800_00">Pastor Canadense R$ 800,00</string>
    <string name="femea">Fêmea</string>
    <string name="adestrado">Adestrado</string>
    <string name="com_todas_as_vacinas_em_dia">Com todas as vacinas em dia</string>
    <string name="calcular">CALCULAR</string>
</resources>
